<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/magnitude_margin"
    android:layout_marginStart="@dimen/magnitude_margin"
    android:layout_marginLeft="@dimen/magnitude_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/icon_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mag_background"
        android:transitionName="@string/transition_icon"
        android:layout_gravity="center"
        android:contentDescription="@string/a11y_icon" />

    <TextView
        android:id="@+id/magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/magnitude_textsize"
        android:transitionName="@string/transition_mag"
        android:gravity="center" />

</FrameLayout>
