<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/LatLng_heading"
        android:fontFamily="sans-serif"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_row="0"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/latlng"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="1"/>

    <TextView
        android:id="@+id/distance_heading"
        android:fontFamily="sans-serif"
        android:text="@string/distance_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_column="0"
        android:layout_row="1" />

    <TextView
        android:id="@+id/distance"
        android:layout_column="1"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/count_heading"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/count_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_column="0"
        android:layout_row="2"/>

    <TextView
        android:id="@+id/people_count"
        android:layout_column="1"
        android:layout_row="2"/>

    <TextView
        android:id="@+id/detail_url"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="More" />
</GridLayout>